# agent-utilities

./: .bumpversion.cfg  .codespellignore  .dockerignore  .env.example  .gitattributes  .gitignore  .kg_ingest_diff.patch  .liveness_baseline.json  .pre-commit-config.yaml  .security-audit-allow.txt  =3.3.0  AGENTS.head.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  MANIFEST.in  README.md  analyze_traces.sh  awesome-deep-trading-test.yaml  browse_output.txt  conftest_test.py  create_schema.py  custom_path.db  find_leaks.py  fix_final.py  fix_it.py  fix_lints.py  fix_mypy.py  fix_remaining.py  fix_tests.py  genesis.yaml  llms.txt  mcp_config.bus.json  mcp_config.example.json  mkdocs.yml  mypy_errors.txt  mypy_out.txt  mypy_output.txt  (+66 more)
.agent/handoffs/: 2026-05-19-190800-tool-distribution-testing.md  2026-05-24-020900-parallel-engine-workflow-library.md
.agents/governance/: governance_2026-05-26.md
.github/workflows/: backend-parity-nightly.yml  concept-governance.yml  guardrails.yml  pages.yml
.specify/design/: README.md  _template.md  kg-parallel-execution-plan.md
.specify/evidence/: r1.json  r1_overview.md  r2.json  r2_overview.md
.specify/memory/: constitution.json  constitution.md
.specify/reports/: agi-to-asi-gap-analysis.md  ca000_discovery.json  ca003_architecture_agent_utilities.json  ca003_architecture_hermes.json  ca003b_arch_diff.json  ca004b_relevance.json  ca010_innov_2604.20209.json  ca010_innov_2605.22721.json  ca010_innov_2606.06473.json  ca010_innov_2606.13814.json  ca010_innov_2606.13905.json  ca010_innov_2606.14260.json  (+23 more)
agent/: CRON.md  CRON_LOG.md  IDENTITY.md  MEMORY.md  USER.md  mcp_config.json
agent_data/: MEMORY.md
agent_utilities/: __init__.py  __main__.py  a2a.py  acp_adapter.py  acp_providers.py  agent_factory.py  agent_registry_builder.py  agent_utilities.py  api_utilities.py  approval_manager.py  auth.py  base_utilities.py  chat_persistence.py  config.py  custom_observability.py  decorators.py  discovery.py  embedding_utilities.py  event_aggregator.py  exceptions.py  file_safety.py  graph_orchestration.py  guardrails.py  interfaces.py  mcp_agent_manager.py  mcp_utilities.py  memory.py  mermaid.py  middlewares.py  model_factory.py  models.py  nested_context.py  persistence.py  prompt_builder.py  scheduler.py  sdd.py  secrets_client.py  server.py  structured_prompts.py  tool_filtering.py  (+6 more)
deploy/: README.md  action-policy.default.yml  mcp-fleet.registry.yml  schedules.yml
docker/: Dockerfile  Dockerfile.multiplexer  README.md  docker-compose.kafka.yml  egeria.compose.yml  engine-shards.compose.yml  falkordb.compose.yml  jena_fuseki.compose.yml  kafka-kraft.compose.yml  mcp.compose.yml  neo4j.compose.yml  paradedb.compose.yml  pg-age-full.compose.yml  pg-age.compose.yml  pggraph-age.compose.yml  pggraph.compose.yml  requirements-multiplexer.txt
docs/: AHE_ARCHITECTURE.md  CONTEXT.md  NAMING.md  README.md  README.md.orig  README.md.patch  _vendor_eg_capability_ledger.json  agent-os-architecture.md  agent-registry.md  architecture.md  building-mcp-servers.md  capabilities-power.json  capabilities-power.md  capabilities.md  centralized_kg_coordination.md  cognitive-scheduler.md  comparative_analysis_palantir_aip.md  comparative_analysis_quant_frameworks.md  concept_coordination.md  concept_extraction_standards.md  concept_map.md  concept_map.md.patch  concept_reservations.yaml  concepts.yaml  conductor-orchestration.md  configuration.md  creating-an-agent.md  deploy.md  design-patterns-alignment.md  development.md  ecosystem.md  emergent-architecture.md  features.md  first-principles.md  genesis.yaml  graph_backends_architecture.md  index.md  journey.md  knowledge-graph.md  layered_analysis_architecture.md  (+17 more)
plan/: transcribe_audio_capability_plan.md
reports/: ara-comparative-analysis-2026-06-14.md  cacherl-hote-kyle-comparative-analysis-2026-06-16.md  latent-spatial-memory-comparative-analysis-2026-06-15.md  mcp_test_logs.txt  multi-source-comparative-analysis-2026-06-15.md  w4-concept-hierarchy-dryrun.md
scratch/: sweep_results.txt
scripts/: add_trace_decorator.py  apply_concept_migration.py  audit_dependencies.py  autocurate_repo.py  bench_bus.py  bootstrap.sh  build_concept_rdf.py  build_concepts_yaml.py  build_feature_ledger.py  build_wasm_warm_payload.sh  check.py  check_capability_ledger.py  check_concept_gaps.py  check_concept_governance.py  check_concepts.py  check_connector_manifests.py  check_coupling.py  check_cpd.py  check_designation_eval.py  check_domain_vocab.py  check_eval_corpus.py  check_genesis_manifest.py  check_liveness.py  check_longmemeval.py  check_no_env_sprawl.py  check_no_legacy_markers.py  check_no_stub.py  check_ontology.py  check_prompt_schema.py  check_reliability_corpus.py  check_retrieval_quality.py  check_skill_name_collision.py  check_sprawl.py  check_stubs.py  check_surface_parity.py  check_tool_refs.py  check_wiring.py  consolidate_concepts.py  consolidation_callmap.py  curate_batches.py  (+67 more)
tests/: _test_engine.py  check_openapi.py  conftest.py  kg_recording_backend.py  merge_mcp_configs.py  test_a2a_discovery.py  test_a2a_graph_skill.py  test_acp_adapter.py  test_acp_integration.py  test_action_dispatch.py  test_adaptive_stopping.py  test_agent_registry.py  test_agent_step_po.py  test_agent_toolkit_ingestion.py  test_ahe_3_22_code_synthesis.py  test_ahe_3_24_capability_ratchet.py  test_ahe_3_26_improvement_ledger.py  test_ahe_3_31_recursive_distill.py  test_ahe_3_48_latent_efficiency_live_path.py  test_ahe_harness.py  test_alpha_factors.py  test_archivebox_sync.py  test_assimilation_benchmark.py  test_assimilation_benchmark_live_path.py  test_attribution_reliability.py  test_audit_logger.py  test_auto_merge_action_policy.py  test_backend_tiered_migration.py  test_backlink_boost.py  test_backtest_harness.py  test_baseline_overfit_gate.py  test_belief_revision.py  test_breadth_preskip.py  test_bulk_ingestion.py  test_cache_rollout_signals.py  test_causal_reasoning.py  test_chunked_drain.py  test_claude_memory_source.py  test_codemap_skeleton.py  test_cognitive_scheduler.py  (+224 more)
(+3433 files in other folders)
