[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-utilities"
version = "0.41.0"
description = "Agent Utilities for Pydantic AI Agents"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3"]
requires-python = ">=3.11,<3.14"
dependencies = [
    "tree-sitter>=0.23.0",
    "requests>=2.34.0",
    "urllib3>=2.3.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.14.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.2.1",
    "ladybug>=0.16.0",
    "epistemic-graph>=0.24.0",
    "cryptography>=48.0.0",
    "pathspec",
    "platformdirs>=4.0.0",
    "packaging>=24.2",
    "psutil>=7.2.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "filelock>=3.0.0",
    "dspy-ai>=2.5.0",
    "pydantic-ai-slim[fastmcp,openai,a2a,ag-ui,web,cli]>=1.90.0,<2.0.0",
    "confluent-kafka>=2.14.0",
    "llama-index-core>=0.14.21",
    "llama-index-llms-openai>=0.7.9",
    "llama-index-embeddings-openai>=0.6.0",
    "pydantic-acp>=0.1.0",
    "defusedxml>=0.7.1",
]

[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.3.0",
    "eunomia-mcp>=0.3.10",
    "fastapi>=0.136.0",
    "httpx>=0.28.1"
]
agent = [
    "agent-utilities[mcp,ag-ui,terminal]>=0.39.0",
    "universal-skills>=0.35.0",
    "skill-graphs>=0.29.0",
    "pydantic-ai-skills>=0.10.0",
    "pydantic-ai-slim[fastmcp,openai,a2a,ag-ui,web,cli]>=1.90.0,<2.0.0",
    "pydantic-graph>=1.0.0"
]
agent-google = [
    "pydantic-ai-slim[google]>=1.90.0,<2.0.0"
]
agent-groq = [
    "pydantic-ai-slim[groq]>=1.90.0,<2.0.0"
]
agent-mistral = [
    "pydantic-ai-slim[mistral]>=1.90.0,<2.0.0"
]
agent-anthropic = [
    "pydantic-ai-slim[anthropic]>=1.90.0,<2.0.0"
]
agent-huggingface = [
    "pydantic-ai-slim[huggingface]>=1.90.0,<2.0.0"
]
ag-ui = [
    "agent-webui>=0.27.0"]
terminal = [
    "agent-terminal-ui>=0.12.0"]
browser = [
    "playwright>=1.49.1"]
acp = [
    "pydantic-acp>=0.1.0",
    "acpkit[pydantic]>=0.1.0"
]
documents = [
    "llama-index-core>=0.14.15",
    "llama-index-readers-file>=0.4.1"
]
embeddings = [
    "llama-index-core>=0.14.15"]
embeddings-openai = [
    "agent-utilities[embeddings]>=0.39.0",
    "llama-index-embeddings-openai>=0.5.1"]
embeddings-huggingface = [
    "agent-utilities[embeddings]>=0.39.0",
    "llama-index-embeddings-huggingface>=0.7.0"]
embeddings-ollama = [
    "agent-utilities[embeddings]>=0.39.0",
    "llama-index-embeddings-ollama>=0.8.6"]
logfire = [
    "agent-utilities[agent]>=0.39.0",
    "pydantic-ai-slim[logfire]>=1.90.0,<2.0.0"
]
graph = [
    "ladybug>=0.15.3"
]
ann = [
    "hnswlib>=0.8.0"
]
neo4j = [
    "neo4j>=6.1.0"
]
falkordb = [
    "falkordb>=1.0.1"
]
owl = [
    "owlready2>=0.46",
    "rdflib>=7.0.0",
    "pyshacl>=0.29.0"
]
stardog = [
    "agent-utilities[owl]",
    "pystardog>=0.20.0"
]
fuseki = [
    "httpx>=0.28.0",
    "rdflib>=7.0.0"
]
event-kafka = [
    "confluent-kafka>=2.0"
]
vault = [
    "hvac>=2.3.0"
]
auth = [
    "authlib>=1.4.0",
    "joserfc>=1.0.0"
]
finance = [
    "torch>=2.0.0",
    "statsmodels>=0.14.0",
    "yfinance>=0.2.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "httpx>=0.28.0",
    "websockets>=13.0",
    "hmmlearn>=0.3.0"
]
finance-kronos = [
    "agent-utilities[finance]",
    "transformers>=4.40.0",
    "safetensors>=0.4.0"
]
hr = []
medical = []
science = []
law = []
government = []
postgresql = [
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
    "pgvector>=0.3.0"
]
# Native Messaging Backend Abstraction (CONCEPT:ECO-4.5)
messaging-discord = ["discord.py>=2.0"]
messaging-slack = ["slack-bolt>=1.18"]
messaging-telegram = ["python-telegram-bot>=21.0"]
messaging-whatsapp = ["neonize>=0.3", "httpx>=0.28"]
messaging-teams = ["botbuilder-core>=4.14"]
messaging-googlechat = ["google-api-python-client>=2.0", "google-auth>=2.0"]
messaging-googlemeet = ["google-api-python-client>=2.0", "google-auth>=2.0"]
messaging-mattermost = ["mattermostdriver>=7.0"]
messaging-matrix = ["matrix-nio>=0.24"]
messaging-irc = ["irc>=20.0"]
messaging-signal = []
messaging-imessage = []  # macOS-only, AppleScript bridge
messaging-line = ["line-bot-sdk>=3.0"]
messaging-twitch = ["twitchio>=2.0"]
messaging-synology = ["httpx>=0.28"]
messaging-voicecall = ["twilio>=9.0"]
messaging-nextcloud = ["httpx>=0.28"]
messaging = [
    "agent-utilities[messaging-discord,messaging-slack,messaging-telegram,messaging-whatsapp,messaging-teams,messaging-googlechat,messaging-googlemeet,messaging-mattermost,messaging-matrix,messaging-irc,messaging-signal,messaging-line,messaging-twitch,messaging-synology,messaging-voicecall,messaging-nextcloud]"
]
test = [
    "pytest-xdist>=3.6.0",
    "hypothesis>=6.152.1",
    "pytest-cov",
    "mypy",
    "ruff",
    "mutmut",
    "pytest-asyncio", "pytest-cov",
    "pytest-env",
    "pytest-timeout",
    "opentelemetry-instrumentation-starlette",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-asgi",
    "agent-utilities[agent,graph,acp,owl,finance,event-kafka]"
]
all = [
    "agent-utilities[mcp,agent,agent-google,agent-groq,agent-mistral,agent-anthropic,agent-huggingface,embeddings-openai,embeddings-huggingface,embeddings-ollama,logfire,acp,documents,graph,ann,browser,test,owl,stardog,vault,auth,finance,messaging]>=0.39.0"]

[project.scripts]
graph-os = "agent_utilities.mcp.kg_server:main"
graph-os-daemon = "agent_utilities.gateway.daemon:main"
agent-utilities-memory = "agent_utilities.knowledge_graph.memory.cli:main"
mcp-multiplexer = "agent_utilities.mcp.multiplexer:main"

[project.entry-points."agent_utilities.messaging"]
discord = "agent_utilities.messaging.backends.discord:DiscordBackend"
slack = "agent_utilities.messaging.backends.slack:SlackBackend"
telegram = "agent_utilities.messaging.backends.telegram:TelegramBackend"
whatsapp = "agent_utilities.messaging.backends.whatsapp:WhatsAppBackend"
teams = "agent_utilities.messaging.backends.teams:TeamsBackend"
googlechat = "agent_utilities.messaging.backends.googlechat:GoogleChatBackend"
googlemeet = "agent_utilities.messaging.backends.googlemeet:GoogleMeetBackend"
mattermost = "agent_utilities.messaging.backends.mattermost:MattermostBackend"
matrix = "agent_utilities.messaging.backends.matrix:MatrixBackend"
irc = "agent_utilities.messaging.backends.irc:IRCBackend"
signal = "agent_utilities.messaging.backends.signal:SignalBackend"
imessage = "agent_utilities.messaging.backends.imessage:IMessageBackend"
line = "agent_utilities.messaging.backends.line:LINEBackend"
twitch = "agent_utilities.messaging.backends.twitch:TwitchBackend"
synology = "agent_utilities.messaging.backends.synology:SynologyChatBackend"
voicecall = "agent_utilities.messaging.backends.voicecall:VoiceCallBackend"
nextcloud = "agent_utilities.messaging.backends.nextcloud:NextcloudTalkBackend"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
agent_utilities = ["agent_data/**", "prompts/*.json", "**/*.ttl", "**/*.owl", "py.typed"]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E402", "B008", "E501", "B007"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false

[dependency-groups]


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "."
timeout = 30
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "integration: Integration tests using subprocess/TestClient (no external services)",
    "live: Tests requiring live external services (LLM endpoints, real networks)",
    "concept(id): Mark test as validating a specific documentation concept (e.g., CONCEPT:ORCH-1.2)"
]
env = [
    "AGENT_UTILITIES_TESTING=true",
    "VALIDATION_MODE=true"
]

[tool.coverage.run]
source = ["agent_utilities"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass",
    "except ImportError:"
]

[tool.bandit]
exclude_dirs = ["build", "dist", ".venv", "tests"]
skips = ["B101"]
